# stm32_cubemx_linalg

./: .gitmodules  CMakeLists.txt  Makefile
cubemx/: .mxproject
cubemx/cmake/: gcc-arm-none-eabi.cmake
main/: CMakeLists.txt  main.c  syscalls.c
make/: build.mk  common.mk  cubemx.mk  linters.mk  target.mk  tools.mk
requirements/: components.txt
scripts/: clang_format.sh  clang_tidy.sh  linters.sh  submodule.sh
